Fixed some mediasession stuff, got it working on iOS, added some changes for modals, and (again for iOS) downgraded TLS in the nginx config from 1.3 to 1.2, and in wolfSSL from 1.3 to 1.2

--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -211,3 +211,16 @@ input[type=range]::-ms-thumb {
   border:none;
   box-shadow: none;
 }
+
+
+
+
+
+
+#vote_audio_modal .modal-content {
+  background:rgba(100, 100, 100, 0.583);
+}
+
+#vote_audio_modal_label {
+  color: #fff;
+}
